Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BUSINESS ACCOUNT</title>
+  <title>SAM TECH ACADEMY</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.6.0/css/fontawesome.min.css">
@@ -445,5 +445,6 @@
   </script>
 
 </body>
+
 
 </html>
